Update validate, fix refreshToken resetting
